<resources>
    <string name="app_name">Orbis</string>
    <string name="login">Login</string>
    <string name="floatingactionbuttondescription">FloatingActionButtonDescription</string>
    <string name="image_description">image_des</string>
    <string name="groups">Tribes</string>
    <string name="my_feed">My Feed</string>
    <string name="orbis_user">Orbis User</string>
    <string name="empty"></string>
    <string name="km25">25 km</string>
    <string name="title">Title</string>
    <string name="claimed">Claimed</string>
    <string name="claim">Claim</string>
    <string name="connect_with_instagram">Connect with Instagram</string>
    <string name="photos">Photos</string>
    <string name="posts">Posts</string>
    <string name="connect_with_instagram_or_add_photos_straight_from_orbis">Connect with instagram or add photos straight from Orbis</string>
    <string name="empty_feed_description">No posts, add one</string>
    <string name="take_photo">Take photo</string>
    <string name="follow">Follow</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="events">Events</string>
    <string name="share">Share</string>
    <string name="report">Report</string>
    <string name="delete">Delete</string>
    <string name="confirmed">Confirmed:</string>
    <string name="confirmed_">Confirmed</string>
    <string name="i_go">I\'ll go!</string>
    <string name="read_more">view more</string>
    <string name="read_less">view less</string>
    <string name="choose_color">Choose color</string>
    <string name="enter_group_name">Enter tribe name</string>
    <string name="create_group">Create tribe</string>
    <string name="allow">Allow <b>App</b> to take picture</string>
    <string name="deny">Deny</string>
    <string name="setting">Setting</string>
    <string name="choose_photo_title">Choose Photo</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="social">Social</string>
    <string name="preferences">Preferences</string>
    <string name="change_photo">Change photo</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_password">Enter password</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="orbis_version">Orbis v1.1.7</string>
    <string name="comment">Comment</string>
    <string name="rate_app">Rate app</string>
    <string name="invite_friends">Invite friends</string>
    <string name="service_terms">Service Terms</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="language">Language</string>
    <string name="unit">Unit</string>
    <string name="miles">Miles</string>
    <string name="push_notification">Push notification</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="reset_settings">Reset settings</string>
    <string name="change_group">Change Tribe</string>
    <string name="manage_my_groups_admin">Manage my tribes (admin)</string>
    <string name="places_you_follow">Places you follow</string>
    <string name="account_privacy">Account privacy</string>
    <string name="make_my_account_private">Make my account private</string>
    <string name="unfollow">Unfollow</string>
    <string name="device_language">Device language</string>
    <string name="leave_group">Leave tribe</string>
    <string name="languages">Languages</string>
    <string name="places">Places</string>
    <string name="to_get_the_best">To get the best out of ORBIS <b>sign up</b> and be part … it\'s <b> fast and free</b></string>
    <string name="i_want_to_sign_up">I want to sign up</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_place">Create place</string>
    <string name="write_your_comment">Write your comment …</string>
    <string name="comments">Comments</string>
    <string name="type_here">Type here …</string>
    <string name="messages">Messages</string>
    <string name="result_of">Results of</string>
    <string name="news">News</string>
    <string name="pending">Pending</string>
    <string name="notification">Notification</string>
    <string name="accept">Accept</string>
    <string name="post">Post</string>
    <string name="type_here_about_the_place_group_or_whatever">Type here about the place, tribe or whatever</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="search">Search</string>
    <string name="i_understood">I understood</string>
    <string name="it_is_forbidden_to">It is forbidden to create tribes of commercial establishments</string>
    <string name="start">Start</string>
    <string name="event">Event</string>
    <string name="create_event">Create event</string>
    <string name="end">End</string>
    <string name="address_street">Address: Street, Complement, Neighborhood, City</string>
    <string name="event_title">Event title</string>
    <string name="already_exist">Already Exist!</string>
    <string name="already_sign_up">This email already signed up using %s</string>
    <string name="understood">Understood</string>
    <string name="your_request_was_sent_successfully">Your request was sent successfully!</string>
    <string name="you_will_receive_an_email_to_reset_your_password_just_click_on_the_link_and_follow_the_steps">You will receive an email to reset your password. Just click on the link and follow the steps !</string>
    <string name="enter_group_description">Enter Tribe Description!</string>
    <string name="group_description_small">Minimum tribe description length is 15 characters</string>
    <string name="group_description_big">Maximum description length 140!</string>
    <string name="select_a_group_image">Select a Tribe Image!</string>
    <string name="choose_a_color">Choose a Color!</string>
    <string name="unable_location">Unable to get location!</string>
    <string name="group_created">Tribe Created Successfully</string>
    <string name="type_group_description">Type tribe description</string>
    <string name="no_desc">This place does not have a description. To include one please press and hold here</string>
    <string name="numberPlaceHolder">%d</string>
    <string name="by_clicking">by clicking register you are accepting the</string>
    <string name="terms_of_use">terms of use</string>
    <string name="follow_request_text">%s has requested to follow</string>
    <string name="update_group">Update Tribe</string>
    <string name="there_are_no_messages">There are no messages</string>
    <string name="nearby">Nearby</string>
    <string name="welcome_onborading">Welcome to the Orbis app!</string>
    <string name="onboarding_details">A geolocation social network created to map the social tribes in your region. With Orbis, you can check where those tribes are in real time and get to know them.</string>
    <string name="replies">Replies</string>
    <string name="taking_a_loog">Are you just \n taking a look?</string>
    <string name="publish_as">I would like to publish as:</string>
    <string name="your_event">Your Event</string>
    <string name="date">Date</string>
    <string name="event_description">Event Description</string>
    <string name="address_street_number_neighborhood_city">Address, street, number, neighborhood, city</string>
    <string name="choose_a_group">Choose a tribe</string>
    <string name="type_the_name_of_the_place_here">Type the name of the place here ...</string>
    <string name="type_the_address_here_optional">Type the address here (Optional)</string>
    <string name="post_as">I would like to post as:</string>
    <string name="your_post">Your Post</string>
    <string name="terms_of_service">Terms Of Service</string>
    <string name="save_change">Save Change</string>
    <string name="change_password">Change Password</string>
    <string name="delete_my_account">Delete My Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_pass_info">Don\'t worry, we sent an e-mail to your registered email address so you can reset your password</string>
    <string name="forgot_my_password">Forgot my password</string>
    <string name="orbis_logo">ORBIS</string>
    <string name="no_news">No News</string>
    <string name="no_notification_yet">No notification yet</string>
    <string name="no_notification">No notification</string>
    <string name="no_posts">No Posts</string>
    <string name="follow_this_account_to_see_their_photos_and_posts">Follow this account to see their photos and posts</string>
    <string name="this_account_is_private">This Account is Private</string>
    <string name="by_clicking_register_you_are_accepting_the_terms_of_use">by clicking register you are accepting the terms of use</string>
    <string name="feed">Feed</string>
    <string name="members">Members</string>
    <string name="no_post_has_been_uploaded_to_this_group_yet">No post has been uploaded to this tribe yet</string>
    <string name="edit_place_description">Edit Place Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="enter_your_text">Enter your text</string>
    <string name="report_group">Report Tribe</string>
    <string name="help_us_understand_what_s_happening_with_this_post_how_would_you_describe_it">Help us understand what\'s happening with this post. How would you describe it?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="what_do_you_want_to_send">What do you want to send?</string>
    <string name="upload_photo">Upload photo</string>
    <string name="get_direction">Get Direction</string>
    <string name="enter_valid_email">Enter a valid email</string>
    <string name="enter_valid_username">Enter a valid username</string>
    <string name="accept_terms">by clicking register you are accepting the terms of use</string>
    <string name="register_success">Registered Successfully</string>
    <string name="enter_name">Please enter a name</string>
    <string name="enter_valid_password">Please enter a valid password</string>
    <string name="already_exists">Already Exist</string>
    <string name="email_already_have">This email already have an account</string>
    <string name="logged_in_success">Logged In Successfully</string>
    <string name="enter_comment">Enter comment</string>
    <string name="event_created">Event Created!</string>
    <string name="EVENT">EVENT</string>
    <string name="select_start_time">Select Start Time</string>
    <string name="enter_title">Please enter title</string>
    <string name="select_event_time">Please select event time</string>
    <string name="enter_event_details">Please enter event details</string>
    <string name="end_time_before_error">End time cannot be before than start time</string>
    <string name="start_time_past_error">Start time cannot be past time</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_subscription_confirmation">Are you sure you want to delete this offer?</string>
    <string name="now_you_can_subscribe">Now you can become part of the tribe member club and receive benefits!</string>
    <string name="incredible_understood">Incredible! I understood</string>
    <string name="block_group">Block tribe</string>
</resources>