<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/what_do_you_want_to_send"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_camera_alt_24"
            android:drawablePadding="16dp"
            android:drawableTint="@color/black"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_vertical"
            android:paddingTop="8dp"
            android:text="@string/photo"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_videocam_24"
            android:drawablePadding="16dp"
            android:drawableTint="@color/black"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_vertical"
            android:paddingTop="8dp"
            android:text="@string/video"
            android:textSize="18sp" />
    </LinearLayout>
</layout>