<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_top_32dp"
        android:background="@drawable/bg_round_white_rect">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_16dp"
            android:src="@drawable/ic_error"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image_description" />

        <TextView
            android:id="@+id/dialogInfoTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_16dp"
            android:layout_marginTop="@dimen/margin_top_32dp"
            android:layout_marginEnd="@dimen/margin_end_16dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:text="@string/it_is_forbidden_to" />


        <Button
            android:id="@+id/dialogInfoPositiveButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/margin_top_32dp"
            android:background="@drawable/black_btn"
            app:backgroundTint="@color/black"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/i_understood"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialogInfoTitleTextView" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>