<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round_white_rect">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_top_32dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/delete_subscription_confirmation" />

            <Button
                android:id="@+id/btn_no"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/margin_top_32dp"
                android:background="@drawable/black_btn_round_bottom_left"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/no"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16sp"
                app:backgroundTint="@color/black"
                app:layout_constraintEnd_toStartOf="@id/btn_yes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <Button
                android:id="@+id/btn_yes"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/margin_top_32dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/yes"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16sp"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_no"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>